python/ql/test/library-tests/taint/dataflow/TestNode.expected
ERROR: getNode() cannot be resolved for type Node (TestNode.ql:5,69-76)
ERROR: getTrackedValue() cannot be resolved for type TaintedNode (TestNode.ql:5,10-25)
